force-app/main/default/objects/RemoteAccessSetting__c/RemoteAccessSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>在宅アクセス権限制御</label>
</CustomObject>