force-app/main/default/objects/RemoteAccessSetting__c/fields/ApexErrorEmailtoAddress__c.field-meta.xml
<CustomField>
    <fullName>ApexErrorEmailtoAddress__c</fullName>
    <label>APEX異常時通知メール宛先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>