force-app/main/default/objects/RemoteAccessSetting__c/fields/GroupTypeQueue__c.field-meta.xml
<CustomField>
    <fullName>GroupTypeQueue__c</fullName>
    <label>グループタイプ_キュー</label>
    <length>10</length>
    <type>Text</type>
</CustomField>