force-app/main/default/objects/RemoteAccessSetting__c/fields/OfficeGroupId__c.field-meta.xml
<CustomField>
    <fullName>OfficeGroupId__c</fullName>
    <label>出社グループID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>