force-app/main/default/objects/RemoteAccessSetting__c/fields/OfficeGroupMemberResetBatchSize__c.field-meta.xml
<CustomField>
    <fullName>OfficeGroupMemberResetBatchSize__c</fullName>
    <label>出社グループメンバーリセットバッチサイズ</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>