force-app/main/default/objects/RemoteAccessSetting__c/fields/SearchConditionUserType__c.field-meta.xml
<CustomField>
    <fullName>SearchConditionUserType__c</fullName>
    <label>検索条件_ユーザ種別</label>
    <length>255</length>
    <type>Text</type>
</CustomField>