force-app/main/default/objects/RemoteAccessSetting__c/fields/SearchEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SearchEventErrorMessage__c</fullName>
    <label>検索イベントエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>