force-app/main/default/objects/RemoteAccessSetting__c/fields/SwitchingOfficeRemoteEventErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>SwitchingOfficeRemoteEventErrorMessage__c</fullName>
    <label>出社在宅切り替えイベントエラーメッセージ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>