force-app/main/default/objects/RemoteAccessSetting__c/fields/WorkStyleTypeOffice__c.field-meta.xml
<CustomField>
    <fullName>WorkStyleTypeOffice__c</fullName>
    <label>勤務形態_出社</label>
    <length>10</length>
    <type>Text</type>
</CustomField>