force-app/main/default/objects/RemoteAccessSetting__c/fields/WorkStyleTypeRemote__c.field-meta.xml
<CustomField>
    <fullName>WorkStyleTypeRemote__c</fullName>
    <label>勤務形態_在宅</label>
    <length>10</length>
    <type>Text</type>
</CustomField>